tests/cases/errors/compile_local_self_init.lox
// A local cannot reference itself in its own initializer.
// expect compile error: Can't read local variable
{
  var a = a;
}
